; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_verbs.c___verbs_timer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_verbs.c___verbs_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipath_devdata = type { i32, i32 }

@jiffies = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @__verbs_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__verbs_timer(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.ipath_devdata*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = inttoptr i64 %4 to %struct.ipath_devdata*
  store %struct.ipath_devdata* %5, %struct.ipath_devdata** %3, align 8
  %6 = load %struct.ipath_devdata*, %struct.ipath_devdata** %3, align 8
  %7 = getelementptr inbounds %struct.ipath_devdata, %struct.ipath_devdata* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @ipath_ib_timer(i32 %8)
  %10 = load %struct.ipath_devdata*, %struct.ipath_devdata** %3, align 8
  %11 = getelementptr inbounds %struct.ipath_devdata, %struct.ipath_devdata* %10, i32 0, i32 0
  %12 = load i64, i64* @jiffies, align 8
  %13 = add nsw i64 %12, 1
  %14 = call i32 @mod_timer(i32* %11, i64 %13)
  ret void
}

declare dso_local i32 @ipath_ib_timer(i32) #1

declare dso_local i32 @mod_timer(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
